--- a/templates/sandbox.html
+++ b/templates/sandbox.html
@@ -56,6 +56,8 @@
 
     <textarea id="sql-query" class="form-control" placeholder="Enter your SQL query here"></textarea>
     <button onclick="executeQuery()" class="btn btn-primary mt-2">Run Query</button>
+    <a href="/home" class="btn btn-primary">Back</a>
+
     <div id="query-results" class="query-results-container"></div>
 
     <script>
